--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.28.0",
+    "eslint-plugin-vue": "^7.11.1",
+    "vue-eslint-parser": "^7.6.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-project-builder": "^1.0.17"
   }
