--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   },
   "homepage": "https://github.com/Mone-Lee/simpleEditor#readme",
   "dependencies": {
-    "vue": "^2.6.14",
-    "vue-router": "^3.5.1"
+    "vue": "^2.6.14"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
