--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "simpleeditor",
-  "version": "1.0.0",
+  "name": "vue-light-editor",
+  "version": "1.0.1",
   "description": "功能简单的富文本编辑器",
-  "main": "index.js",
+  "main": "./dist/lightEditor.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --config webpack.dev.js --open"
+    "dev": "webpack-dev-server --config lib/webpack.dev.js --open",
+    "build": "webpack --config lib/webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -22,11 +23,23 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
+    "babel-loader": "^8.2.2",
     "babel-eslint": "^10.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "eslint": "^7.28.0",
     "eslint-plugin-vue": "^7.11.1",
     "vue-eslint-parser": "^7.6.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
+    "less": "^3.12.2",
+    "less-loader": "^7.1.0",
+    "style-loader": "^2.0.0",
+    "vue-loader": "^15.9.7",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.11.2",
-    "webpack-project-builder": "^1.0.17"
+    "webpack-merge": "^5.7.0"
   }
 }
