--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "vue-light-editor",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "功能简单的富文本编辑器",
   "main": "./dist/lightEditor.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --config lib/webpack.dev.js --open",
-    "build": "webpack --config lib/webpack.prod.js"
+    "dev": "NODE_ENV=development webpack-dev-server --config lib/webpack.dev.js --open",
+    "build": "NODE_ENV=production webpack --config lib/webpack.prod.js"
   },
   "repository": {
     "type": "git",
