--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-light-editor",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "功能简单的富文本编辑器",
   "main": "./dist/lightEditor.min.js",
   "scripts": {
@@ -23,18 +23,19 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
-    "babel-loader": "^8.2.2",
     "babel-eslint": "^10.1.0",
-    "html-webpack-plugin": "^3.2.0",
-    "eslint": "^7.28.0",
-    "eslint-plugin-vue": "^7.11.1",
-    "vue-eslint-parser": "^7.6.0",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
+    "eslint": "^7.28.0",
+    "eslint-plugin-vue": "^7.11.1",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^3.2.0",
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
     "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
+    "vue-eslint-parser": "^7.6.0",
     "vue-loader": "^15.9.7",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.31.0",
